--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ body {
     border-radius: 50px;
 }
 .button {
+    cursor: pointer;
     border-radius: 25px;
     padding: 12px 50px;
     display: inline-block;
@@ -144,11 +145,15 @@ body {
 .promo {
     padding-top: 50px;
     padding-bottom: 50px;
+    margin: -20px;
     display: flex;
+    justify-content: space-between;
 }
 .card {
-    width: 570px;
+    flex: 50%;
+    max-width: 570px;
     min-height: 380px;
+    margin: 20px;
     position: relative;
     border-radius: 20px;
     overflow: hidden;
@@ -156,9 +161,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-.card:first-child{ 
-    margin-right: 50px;
 }
 .card::before {
     z-index: -1;
@@ -211,4 +213,219 @@ body {
     background-image: url('../img/minimal-efforts.png');
     background-repeat: no-repeat;
     background-size: cover;
+}
+.delivery-week {
+    display: block;
+    padding: 100px 0;
+}
+.section-title {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 23px;
+    margin-top: 0;
+    margin-bottom: 47px;
+}
+.delivery-cards {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+}
+.delivery-card{
+    position: relative;
+    width: 275px;
+    height: 182px;
+    border-radius: 18px;
+    overflow: hidden;
+    margin: 15px;
+}
+.delivery-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.delivery-tag {
+    position: absolute;
+    left: 10px;
+    top: 16px;
+    border-radius: 30px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #49494F;
+    padding: 5px 10px;
+}
+.tag-text-light {
+    color:#FFF;
+}
+.tag-health {
+    background: #D0FD89;
+}
+.tag-veg {
+    background: #AEBC41;
+}
+.tag-meat {
+    background: #B86B78;
+}
+.tag-bird {
+    background: #D68334;
+}
+.tag-fish {
+    background: #CD6255;
+}
+.tag-child {
+    background: #FFFDBF;
+}
+.tag-parent {
+    background: #F6FDC8;
+}
+.tag-holiday {
+    background: #FEF7FE;
+}
+.section-grey {
+    background-color: #F6F6F6;
+}
+.category {
+    padding-top: 40px; 
+    padding-bottom: 60px;
+}
+.tabs {
+    display: flex;
+    margin: 0;
+    margin-bottom: 62px;
+    padding: 0;
+    list-style: none;
+}
+.tabs-link {
+    font-size: 20px;
+    line-height: 23px;
+    color: #49494F;
+    text-decoration: none;
+    margin-right: 58px;
+}
+.tabs-link.active {
+    color: #F37321;
+}
+.tabs-content {
+    display: flex;
+    margin: -37px;
+}
+.tabs-card {
+    margin: 37px;
+    max-width: 270px;
+    border-radius: 20px;
+    overflow: hidden;
+    background-color: #fff;
+}
+.tabs-img {
+    width: 100%;
+}
+.tabs-card-content {
+    padding: 23px;
+}
+.tabs-title {
+    margin-top: 0;
+    margin-bottom: 13px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+}
+.tabs-description {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 23px;
+    color: #B9B9BE;
+}
+.tabs-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.tabs-price {
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 23px;
+    color: #4B4B51;
+    display: block;
+    margin-bottom: 5px;
+}
+.tabs-weight {
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 20px;
+    color: #AAAAB1;
+}
+.button-outline {
+    background-color: transparent;
+    padding: 15px 25px;
+    border: 2px solid #F37321;
+    box-sizing: border-box;
+    border-radius: 33px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F37321;
+}
+.button-center{
+    display: block;
+    margin: auto;
+    margin-top: 60px;
+    width: 315px;
+}
+.benefits {
+    padding-top: 100px;
+    padding-bottom: 202px;
+}
+.benefits-cards {
+    display: flex;
+    margin: -37px;
+}
+.benefit-card {
+    width: 270px;
+    height: 296px;
+    margin: 37px;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+}
+.benefit-img {
+    display: block;
+    margin: 30px auto;
+}
+.benefit-title {
+    max-width: 158px;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 13px;
+    margin-top: 4px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 23px;
+    color: #000000;
+}
+.benefit-description {
+    max-width: 223px;
+    margin: auto;
+    text-align: center;
+    font-size: 14px;
+    line-height: 22px;
+    color: #49494F;
+}
+
+footer {
+    height: 181px;
+    padding: 40px 0px;
+}
+.footer-wrapper {
+    display: flex;
+    align-items: center;
+}
+.footer-logo {
+    width: 205px;
+    margin-right: 50px;
+}
+.footer-link { 
+    text-decoration: underline;
+    font-size: 16px;
+    line-height: 23px;
+    color:#000000;
+    margin-right: 50px;
 }
